[project]
name = "pytorch-cvc-training-eng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "efficientnet-pytorch>=0.7.1",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "pytorch-optimizer>=3.3.2",
    "rich>=13.9.4",
    "scikit-learn>=1.6.0",
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
functorch = { git = "https://github.com/pytorch/functorch.git" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
